Added possibility to dispatch click event

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,11 @@
     color: inherit;
 }
 
+.input:disabled {
+    color: #505050;
+    border-color: #505050;
+}
+
 .input:focus:invalid {
     border-color: red;
 }
