--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,8 @@
     text-shadow: none;
     outline: none;
     color: inherit;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .checkbox {
@@ -160,6 +162,8 @@
 *::before,
 *::after {
     box-sizing: inherit;
+    font: inherit;
+    line-height: inherit;
 }
 
 html,
@@ -168,4 +172,6 @@ body {
     position: relative;
     margin: 0;
     padding: 0;
+    font: 400 14px "Segoe UI", Tahoma, sans-serif;
+    line-height: 14px;
 }
