--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,22 @@
     user-select: none;
 }
 
+.select {
+    height: 30px;
+    width: 180px;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #fff;
+    border-radius: 0;
+    box-shadow: none;
+    outline: none;
+    color: inherit;
+}
+
+.select-item {
+    background: #1e2833;
+}
+
 ::placeholder {
     color: #505050;
     opacity: 1;
