Added auto fill for the current domain (user needs to open the extension popup for each domain for it to work on all pages of that domain)

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@
     display: inline-flex;
 }
 
+.flex--left {
+    justify-content: left;
+    align-items: center;
+}
+
 .flex--center {
     justify-content: center;
     align-items: center;
